www/main.css
.selectize-control {
  display: inline-block;
  vertical-align: middle;
  top: 5px;
}

/* Do not wrap selectize inputs */
.selectize-input {
  white-space: nowrap;
}

/* remove score header */
.score-header {
  visibility: hidden;
  height: 0;
}

#main-control-timer {
  text-align: center;
  width: 100%;
}

/* ** fret display ** */
/* fret board backgrounds are x-string
   nut and frets are x-string::before
   strings are x-string::after */
.headstock-string {
  background-color: #e59317; /* headstock background */
  border: transparent;
  position: absolute;
  height: 32px;
}

.guitar-string {
  background-color: #966F33; /* fret background */
  border: transparent;
  position: relative;
  height: 32px;
}

.headstock-string:hover {
  background-color:  rgba(229,147,23, 0.9)
}

.guitar-string:hover {
  background-color:  rgba(150, 111, 51, 0.9)
}


/* nut */
.headstock-string::before {
  content: "";
  display: block;
  width: 10px;
  height: 100%;
  /* background-color: #F6F1EA;  */
  background:linear-gradient( to right, #F6F1EA, #F6F1EA, #8A6E2F);
  right: 0%;
  border-color: transparent;
  position: absolute;
  z-index: 1;
}

/* fret */
.guitar-string::before {
  content: "";
  display: block;
  width: 3px;
  height: 100%;
  /* background-color: #aaa9ad;  */
  background:linear-gradient( to right, #FEDB37, #FDB931, #8A6E2F);
  right: 0%;
  border-color: transparent;
  position: absolute;
  z-index: 1;
}

/* string */
.guitar-string::after, .headstock-string::after{
  content: "";
  display: block;
  width: 100%;
  height: var(--thickness);
  /* background-color: #efd5b8; guitar string */
  background:linear-gradient( to bottom, #bcc6cc, #eee, #bcc6cc);
  top: 46%;
  border-color: transparent;
  position: absolute;
  z-index: 3;
  box-shadow: 0px 1px #888888;
}

.headstock-string::after {
  rotate: var(--rotation);  
  transform-origin: center right;
}

:root {
  --fret-marker-size: 12px;
}

/* fret marker */
.fret-marker {
  height: var(--fret-marker-size);
  width: var(--fret-marker-size);
  padding: 0;
  background-color: #bcc6cc;
  border-radius: 50%;
  display: inline-block;
  z-index: 4;
  position: absolute;
  left: calc(50% - 7px);
  top: 26px;
}

.fret-marker2 {
  height: var(--fret-marker-size);
  width: var(--fret-marker-size);
  padding: 0;
  background-color: #bcc6cc;
  border-radius: 50%;
  display: inline-block;
  z-index: 4;
  position: absolute;
  left: calc(50% - 7px);
  top: -6px;
}


/* letters */
#main-letters-piano .rt-td-inner {
  padding: 1px;
  height: 40px;
}

.natural {
  width: 100%;
  height: 100%;
  color: #202020;
  background-color: #f5f2e7;
  border-radius: 0.5rem;
  border-color: #888888;
  border-width: 1px;
}

.accidental {
  width: 100%;
  height: 100%;
  color: #f5f2e7;
  background-color: #202020;
  border-radius: 0.5rem;
  border-color: #888888;
  border-width: 1px;
}

.letter {
  width: 100%;
  height: 100%;
  color: var(--letter-text-colour);
  background-color: var(--letter-background-colour);
  border-radius: 0.5rem;
  border-color: #888888;
  border-width: 1px;
}

.letter-highlight {
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

/* fret dots */
.dot {
  height: 30px;
  width: 30px;
  padding: 0;
  background:linear-gradient( to bottom, var(--gradient-edge), var(--gradient), var(--gradient-edge));
  color: var(--dot-text);
  border-radius: 50%;
  display: inline-block;
  z-index: 4;
  position: absolute;
  left: calc(50% - 15px);
  top: 0px;
  display: none;
}

.dot-text {
  position: relative;
  top: 15%;
  font-weight: 600;
  display: none;
}

.natural, .sharp, .flat {
  display: none;
}

